[package]
name = "vodfriends-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
m3u8-rs = "5.0.4"
nom = "7.1.3"
reqwest = { version = "0.11.18", features=["json"] }
serde = "1.0.164"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
